fix(#31666): Fix v-scroll brief display at the board level
A vertical scrollbar can appears while dragging a card-out, when the column height is higher than the heght-viewport and the board is being reduced (quicker than its contents). Force hidding the scrollbars using overflow:clip.

--- a/web_src/css/features/projects.css
+++ b/web_src/css/features/projects.css
@@ -3,6 +3,7 @@
   flex-direction: row;
   flex-wrap: nowrap;
   overflow-x: auto;
+  overflow-y: clip;
   align-items: stretch;
   margin: 0 0.5em;
 }
